<resources>
    <string name="app_name">RetrofitFS</string>

    <string name="registration_name">Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_topics">Topics</string>
    <string name="registration_age">Age</string>
    <string name="registration_register">Registrar</string>

    <string name="menu_repositories">Repositories</string>
    <string name="menu_profile">Profile</string>

    <string name="upload_description">Description</string>
    <string name="upload_upload">Upload</string>
    <string name="upload_pick_a_photo">Pick a photo</string>
    <string name="upload_location">Location</string>
    <string name="upload_photographer">Photographer</string>
    <string name="upload_year">Year</string>
    <string name="upload_upload_a_photo">Upload a photo</string>
    <string name="upload_upload_a_album">Upload a album</string>
    <string name="upload_pick_multiple_photos">Pick multiple photos</string>

    <string name="download_download_a_file">Download a File</string>
    <string name="download_info_about_where_the_file_will_be">The files will be located in your Downloads folder.</string>
    <string name="download_failed">Failed to download the file</string>
    <string name="download_download">Download</string>
    <string name="download_download_small_file">Download a small file</string>
    <string name="download_download_big_file">Download a big file</string>
    <string name="search_user_id">User ID</string>
    <string name="search_search">Search</string>
    <string name="search_search_for_user_id">Search for user ID</string>
    <string name="search_search_for_user_name">Search for user name on GitHub</string>
    <string name="send">Send</string>
    <string name="feedback">Feedback</string>
    <string name="message">Message</string>
    <string name="github_sign_in">Sign in with Github</string>
    <string name="github_oauth">Github OAuth</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="fake_name">Fake Name</string>
    <string name="fake_company">Fake Company</string>
    <string name="fake_number_304">304</string>
    <string name="fake_number_37">37</string>
    <string name="fake_bio">This is my fake bio</string>
</resources>
