<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/future_studio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fake_name"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/image_profile"
        app:layout_constraintEnd_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/image_profile"/>

    <TextView
        android:id="@+id/text_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fake_company"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintEnd_toEndOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"/>

    <TextView
        android:id="@+id/text_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/profile_followers"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_following"
        app:layout_constraintTop_toBottomOf="@+id/text_company"/>

    <TextView
        android:id="@+id/text_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/profile_following"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/text_followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_company" />

    <TextView
        android:id="@+id/text_number_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fake_number_304"
        app:layout_constraintStart_toStartOf="@+id/text_followers"
        app:layout_constraintEnd_toEndOf="@+id/text_followers"
        app:layout_constraintTop_toBottomOf="@+id/text_followers"/>

    <TextView
        android:id="@+id/text_number_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fake_number_37"
        app:layout_constraintStart_toStartOf="@+id/text_following"
        app:layout_constraintEnd_toEndOf="@+id/text_following"
        app:layout_constraintTop_toBottomOf="@+id/text_following"/>

    <TextView
        android:id="@+id/text_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fake_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/text_number_followers"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_repos"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@color/colorBlack"
        android:text="@string/menu_repositories"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/text_bio"/>

</android.support.constraint.ConstraintLayout>