<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/search_search_for_user_id"
                android:inputType="text"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/search_search" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/search_search_for_user_name"
                android:inputType="textPersonName"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_search2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/search_search" />

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>